<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <Button
            android:id="@+id/button10"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/第一个Button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/button10"
            android:text="@string/第二个Button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button10"
            android:text="@string/第三个Button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button11"
            android:layout_marginStart="2dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/button12"
            android:text="@string/第四个Button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:text="@string/返回"
            android:textSize="24sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>